--- a/css/style.css
+++ b/css/style.css
@@ -271,8 +271,12 @@ a {
 
 input:checked + .slider-v3::after {
   left: 20px;
-  background: #009FFF;
+  background: #fff;
   box-shadow: 0 0 0 0 #f2f2f2 inset;
+}
+
+input:checked + .slider-v3 {
+  background: #009FFF;
 }
 
 .bottom-scroll-none::-webkit-scrollbar {
