--- a/components/navbar.html
+++ b/components/navbar.html
@@ -132,7 +132,7 @@
 
 <div class="container">
   <div
-      class="w-full h-[67px] bg-[#F4F4F4] rounded-[16px] px-8 flex-jsb-c min-w-[1400px]:gap-16 overflow-x-auto bottom-scroll-none hidden sm:flex">
+      class="w-full h-[67px] bg-[#F4F4F4] rounded-[16px] px-8 flex-jsb-c min-w-[1400px]:gap-16 overflow-x-auto bottom-scroll-none sm:flex">
     <div class="w-full flex-jsb-c min-w-[1300px]">
       <div class="flex-jsb-c gap-6 h-full w-[40%]">
         <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
