--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,4 @@
-<!-- <footer class="bg-[#262626] mt-[250px]">
+<footer class="bg-[#262626] mt-[250px]">
   <div class="container">
     <div class="w-full h-[360px] min-[500px]:h-[320px] relative transform translate-y-[-50%] bg-blue rounded-[12px]">
       <img src="img/contact-me-bg.png" alt="contact-me-bg" class="w-full h-full object-cover  rounded-[16px]">
@@ -311,4 +311,4 @@
     </div>
   </div>
 
-</footer> -->
+</footer>
