--- a/css/output.css
+++ b/css/output.css
@@ -1315,6 +1315,10 @@ select{
   left: 10px;
 }
 
+.left-\[2\%\]{
+  left: 2%;
+}
+
 .left-\[40\%\]{
   left: 40%;
 }
@@ -1381,6 +1385,10 @@ select{
 
 .top-\[-11px\]{
   top: -11px;
+}
+
+.top-\[-140px\]{
+  top: -140px;
 }
 
 .top-\[-5px\]{
@@ -1824,12 +1832,28 @@ select{
   margin-top: -10px;
 }
 
+.mt-\[-150px\]{
+  margin-top: -150px;
+}
+
+.mt-\[-20px\]{
+  margin-top: -20px;
+}
+
 .mt-\[-25px\]{
   margin-top: -25px;
 }
 
 .mt-\[-4px\]{
   margin-top: -4px;
+}
+
+.mt-\[-5px\]{
+  margin-top: -5px;
+}
+
+.mt-\[-60px\]{
+  margin-top: -60px;
 }
 
 .mt-\[100px\]{
@@ -1850,6 +1874,10 @@ select{
 
 .mt-\[20px\]{
   margin-top: 20px;
+}
+
+.mt-\[250px\]{
+  margin-top: 250px;
 }
 
 .mt-\[2px\]{
@@ -1906,10 +1934,6 @@ select{
 
 .mt-\[auto\]{
   margin-top: auto;
-}
-
-.mt-\[-5px\]{
-  margin-top: -5px;
 }
 
 .block{
@@ -2004,6 +2028,10 @@ select{
   height: 18px;
 }
 
+.h-\[1px\]{
+  height: 1px;
+}
+
 .h-\[220px\]{
   height: 220px;
 }
@@ -2034,6 +2062,10 @@ select{
 
 .h-\[353px\]{
   height: 353px;
+}
+
+.h-\[360px\]{
+  height: 360px;
 }
 
 .h-\[36px\]{
@@ -2218,6 +2250,10 @@ select{
 
 .w-\[122px\]{
   width: 122px;
+}
+
+.w-\[170px\]{
+  width: 170px;
 }
 
 .w-\[183px\]{
@@ -2722,6 +2758,10 @@ select{
   gap: 5px;
 }
 
+.gap-\[60px\]{
+  gap: 60px;
+}
+
 .gap-x-\[30px\]{
   -moz-column-gap: 30px;
        column-gap: 30px;
@@ -2957,6 +2997,10 @@ select{
   border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
 }
 
+.border-white\/20{
+  border-color: rgb(255 255 255 / 0.2);
+}
+
 .border-r-\[\#D7DBDF\]{
   --tw-border-opacity: 1;
   border-right-color: rgb(215 219 223 / var(--tw-border-opacity, 1));
@@ -3002,6 +3046,11 @@ select{
 .bg-\[\#212121\]{
   --tw-bg-opacity: 1;
   background-color: rgb(33 33 33 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#262626\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(38 38 38 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#323232\]{
@@ -3133,6 +3182,10 @@ select{
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-white\/20{
+  background-color: rgb(255 255 255 / 0.2);
 }
 
 .bg-white\/50{
@@ -3596,6 +3649,10 @@ select{
   font-weight: 700;
 }
 
+.font-light{
+  font-weight: 300;
+}
+
 .font-medium{
   font-weight: 500;
 }
@@ -3843,6 +3900,14 @@ select{
   transition-duration: 300ms;
 }
 
+@media (min-width: 420px){
+  .min-\[420px\]\:flex-jsb-c{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
 @media (min-width: 640px){
   .sm\:flex-js-c{
     display: flex;
@@ -3910,6 +3975,11 @@ select{
   content: var(--tw-content);
 }
 
+.hover\:border-\[\#009FFF\]:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
+}
+
 .hover\:border-\[rgba\(110\2c 110\2c 110\2c 0\.75\)\]:hover{
   border-color: rgba(110,110,110,0.75);
 }
@@ -3920,16 +3990,6 @@ select{
 }
 
 .hover\:border-blue:hover{
-  --tw-border-opacity: 1;
-  border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
-}
-
-.hover\:border-\[\#f00\]:hover{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 0 0 / var(--tw-border-opacity, 1));
-}
-
-.hover\:border-\[\#009FFF\]:hover{
   --tw-border-opacity: 1;
   border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
 }
@@ -3988,11 +4048,6 @@ select{
 .hover\:text-blue:hover{
   --tw-text-opacity: 1;
   color: rgb(0 159 255 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-\[\#f00\]:hover{
-  --tw-text-opacity: 1;
-  color: rgb(255 0 0 / var(--tw-text-opacity, 1));
 }
 
 .hover\:opacity-100:hover{
@@ -4078,32 +4133,12 @@ select{
 }
 
 @media (max-width: 1600px){
-  .max-\[1600px\]\:bottom-\[0\]{
-    bottom: 0;
-  }
-
-  .max-\[1600px\]\:top-\[inherit\]{
-    top: inherit;
-  }
-
   .max-\[1600px\]\:right-\[10px\]{
     right: 10px;
   }
 
   .max-\[1600px\]\:flex{
     display: flex;
-  }
-
-  .max-\[1600px\]\:w-full{
-    width: 100%;
-  }
-
-  .max-\[1600px\]\:w-\[10vw\]{
-    width: 10vw;
-  }
-
-  .max-\[1600px\]\:w-\[30vw\]{
-    width: 30vw;
   }
 
   .max-\[1600px\]\:w-\[20vw\]{
@@ -4154,12 +4189,12 @@ select{
     margin-bottom: 20px;
   }
 
-  .max-\[1400px\]\:mr-\[0\]{
-    margin-right: 0;
-  }
-
   .max-\[1400px\]\:mb-\[30px\]{
     margin-bottom: 30px;
+  }
+
+  .max-\[1400px\]\:mr-\[0\]{
+    margin-right: 0;
   }
 
   .max-\[1400px\]\:flex{
@@ -4168,14 +4203,6 @@ select{
 
   .max-\[1400px\]\:hidden{
     display: none;
-  }
-
-  .max-\[1400px\]\:h-\[auto\]{
-    height: auto;
-  }
-
-  .max-\[1400px\]\:min-h-\[auto\]{
-    min-height: auto;
   }
 
   .max-\[1400px\]\:min-h-\[inherit\]{
@@ -4250,6 +4277,14 @@ select{
 
   .max-\[1300px\]\:text-\[44px\]{
     font-size: 44px;
+  }
+}
+
+@media (max-width: 1240px){
+  .max-\[1240px\]\:\!scale-75{
+    --tw-scale-x: .75 !important;
+    --tw-scale-y: .75 !important;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
   }
 }
 
@@ -4392,6 +4427,28 @@ select{
 
   .max-\[1024px\]\:text-\[32px\]{
     font-size: 32px;
+  }
+}
+
+@media (max-width: 890px){
+  .max-\[890px\]\:bottom-0{
+    bottom: 0px;
+  }
+
+  .max-\[890px\]\:mb-2{
+    margin-bottom: 0.5rem;
+  }
+
+  .max-\[890px\]\:pl-10{
+    padding-left: 2.5rem;
+  }
+
+  .max-\[890px\]\:pt-\[100px\]{
+    padding-top: 100px;
+  }
+
+  .max-\[890px\]\:leading-\[32px\]{
+    line-height: 32px;
   }
 }
 
@@ -4700,6 +4757,16 @@ select{
   }
 }
 
+@media (max-width: 576px){
+  .max-\[576px\]\:pl-4{
+    padding-left: 1rem;
+  }
+
+  .max-\[576px\]\:pr-4{
+    padding-right: 1rem;
+  }
+}
+
 @media (max-width: 520px){
   .max-\[520px\]\:mb-\[20px\]{
     margin-bottom: 20px;
@@ -4755,6 +4822,52 @@ select{
 
   .max-\[520px\]\:text-\[25px\]{
     font-size: 25px;
+  }
+}
+
+@media (max-width: 500px){
+  .max-\[500px\]\:\!scale-50{
+    --tw-scale-x: .5 !important;
+    --tw-scale-y: .5 !important;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+  }
+}
+
+@media (max-width: 431px){
+  .max-\[431px\]\:flex-col{
+    flex-direction: column;
+  }
+
+  .max-\[431px\]\:pt-\[50px\]{
+    padding-top: 50px;
+  }
+}
+
+@media (max-width: 420px){
+  .max-\[420px\]\:flex-col{
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 350px){
+  .min-\[350px\]\:top-\[-180px\]{
+    top: -180px;
+  }
+}
+
+@media (min-width: 420px){
+  .min-\[420px\]\:h-\[54px\]{
+    height: 54px;
+  }
+}
+
+@media (min-width: 500px){
+  .min-\[500px\]\:top-\[-230px\]{
+    top: -230px;
+  }
+
+  .min-\[500px\]\:h-\[320px\]{
+    height: 320px;
   }
 }
 
@@ -4819,12 +4932,12 @@ select{
     width: 45px;
   }
 
-  .sm\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .sm\:grid-cols-1{
     grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:gap-6{
@@ -4983,9 +5096,38 @@ select{
   }
 }
 
+@media (min-width: 850px){
+  .min-\[850px\]\:grid{
+    display: grid;
+  }
+
+  .min-\[850px\]\:hidden{
+    display: none;
+  }
+}
+
 @media (min-width: 870px){
   .min-\[870px\]\:max-w-\[854px\]{
     max-width: 854px;
+  }
+}
+
+@media (min-width: 890px){
+  .min-\[890px\]\:right-\[70px\]{
+    right: 70px;
+  }
+
+  .min-\[890px\]\:top-\[50\%\]{
+    top: 50%;
+  }
+
+  .min-\[890px\]\:translate-y-\[-50\%\]{
+    --tw-translate-y: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .min-\[890px\]\:text-\[64px\]{
+    font-size: 64px;
   }
 }
 
@@ -5006,10 +5148,6 @@ select{
 }
 
 @media (min-width: 1000px){
-  .min-\[1000px\]\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
   .min-\[1000px\]\:grid-cols-1{
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
@@ -5044,6 +5182,10 @@ select{
   .lg\:max-w-\[670px\]{
     max-width: 670px;
   }
+
+  .lg\:pr-4{
+    padding-right: 1rem;
+  }
 }
 
 @media (min-width: 1100px){
@@ -5059,8 +5201,16 @@ select{
 }
 
 @media (min-width: 1200px){
-  .min-\[1200px\]\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .min-\[1200px\]\:col-span-2{
+    grid-column: span 2 / span 2;
+  }
+
+  .min-\[1200px\]\:block{
+    display: block;
+  }
+
+  .min-\[1200px\]\:hidden{
+    display: none;
   }
 
   .min-\[1200px\]\:grid-cols-2{
@@ -5071,6 +5221,12 @@ select{
 @media (min-width: 1250px){
   .min-\[1250px\]\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1256px){
+  .min-\[1256px\]\:top-\[-100px\]{
+    top: -100px;
   }
 }
 
@@ -5124,6 +5280,16 @@ select{
   }
 }
 
+@media (min-width: 1300px){
+  .min-\[1300px\]\:col-span-3{
+    grid-column: span 3 / span 3;
+  }
+
+  .min-\[1300px\]\:gap-\[60px\]{
+    gap: 60px;
+  }
+}
+
 @media (min-width: 1328px){
   .min-\[1328px\]\:mr-9{
     margin-right: 2.25rem;
@@ -5134,6 +5300,12 @@ select{
   }
 }
 
+@media (min-width: 1350px){
+  .min-\[1350px\]\:left-\[10\%\]{
+    left: 10%;
+  }
+}
+
 @media (min-width: 1433px){
   .min-\[1433px\]\:block{
     display: block;
@@ -5141,6 +5313,12 @@ select{
 
   .min-\[1433px\]\:hidden{
     display: none;
+  }
+}
+
+@media (min-width: 1450px){
+  .min-\[1450px\]\:left-\[17\%\]{
+    left: 17%;
   }
 }
 
